# fine-tune-llm-locally

./: .gitignore  Readme.md  pyproject.toml  talk_to_fine_model.py  traditional_lora_finetune.py
totla_saith/: hiccup_model_test.py  hiccup_model_trainer.py
training_datasets/: hiccup_training_dataset.json  tapori.json
